--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,27 @@ body
   min-height: 150vh;
   background: #333
 }
-.calculator
+.calculator .buttons
 {
   position: relative
   width: 100px;
 }
+.calculator .buttons #value
+{
+  position: relative;
+  grid-column: span 4;
+  height: 100px
+  line-height:0 20px;
+  border-radius: 10px;
+  background: #a7af7c
+  text-align: right;
+  font-size: 1.5em;
+  color: #3a3c2e;
+  overflow: hidden;
+  box-shadow: inset 0 6px 1px 0 rgba(0,0,0,0.35);
+  0 5px 5px rgba (0,0,0,0.5),
+  0 15px 25px rgba(0,0,0,0.35)
+  display: flex;
+  // CHANGE BORDER PROPERTIES
   
-  
+}
